--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
-androidGradlePlugin = "7.4.2"
+androidDesugar = "2.0.0"
+androidGradlePlugin = "8.0.1"
 androidxActivity = "1.7.0"
 androidxComposeMaterial = "1.4.0"
 androidxComposeUi = "1.4.0"
@@ -13,6 +14,7 @@ junit4 = "4.13.2"
 kotlin = "1.8.0"
 
 [libraries]
+android-tools-desugar = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugar" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
 androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "androidxComposeMaterial" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "androidxComposeUi" }
